k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    name: ecommerce
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-monitoring
  labels:
    name: ecommerce-monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    name: istio-system
