k8s/istio-blue-green.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: products-vs
spec:
  hosts:
  - products-service
  http:
  - route:
    - destination:
        host: products-service
        subset: blue
      weight: 100
    - destination:
        host: products-service
        subset: green
      weight: 0
